# xrootd-alicetokenacc

./: .gitlab-ci.yml  Makefile.am  README.md  XrdAliceTokenAcc.cc  XrdAliceTokenAcc.hh  bootstrap.sh  configure.ac  create_rpm  create_targz  xrootd-alicetokenacc.spec
.authz/xrootd/: TkAuthz.Authorization  privkey.pem  pubkey.pem
